--- a/front/Dockerfile.dev
+++ b/front/Dockerfile.dev
@@ -1,29 +1,14 @@
-FROM node:22-alpine AS desc
+FROM node:22-alpine AS base
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN npm ci
 
-RUN apk add --no-cache libc6-compat
-WORKDIR /app
+FROM node:22-alpine AS production
+WORKDIR /usr/src/app
 
 COPY package*.json ./
 RUN npm ci
 
 COPY . .
 
-FROM node:22-alpine AS build
-
-WORKDIR /app
-COPY --from=desc /app ./
-RUN npm run build
-
-FROM node:22-alpine AS dev
-
-WORKDIR /app
-COPY --from=build /app ./
 CMD ["npm", "run", "start:docker"]
-
-FROM node:22-alpine AS prod
-
-WORKDIR /app
-COPY --from=desc /app/node_modules ./node_modules
-COPY --from=build /app/dist ./dist
-
-CMD ["node", "dist/server/server.mjs"]
