--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.3",
     "express": "^4.18.2",
+    "ngx-cookie-service": "^19.1.2",
+    "ngx-cookie-service-ssr": "^19.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
