feat: compress images

--- a/back/package.json
+++ b/back/package.json
@@ -37,6 +37,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "selenium-webdriver": "^4.33.0",
+    "sharp": "^0.34.2",
     "typeorm": "^0.3.24",
     "uuid": "^11.1.0"
   },
