feat: fist prod

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,20 @@
 NODE_ENV=
-PORT=
+API_PORT=
+APP_PORT=
 
 # Database configuration
-DB_TYPE=
 DB_NAME=
 DB_PASS=
 DB_USER=
-DB_HOST=
 DB_EXTERNAL_PORT=
-DB_INTERNAL_PORT=
+
+PHPMYADMIN_PORT=
+
+# Selenium Hub Ports
+SELENIUM_HUB_PORT_1=
+SELENIUM_HUB_PORT_2=
+SELENIUM_HUB_PORT_3=
+
+# Traefik configuration
+API_HOST=
+APP_HOST=
