--- a/front/angular.json
+++ b/front/angular.json
@@ -86,6 +86,10 @@
               "buildTarget": "front:build:development"
             }
           },
+          "options": {
+            "host": "0.0.0.0",
+            "disableHostCheck": true
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
