--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -32,8 +33,11 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "cache-manager": "^7.0.1",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "eventemitter2": "^6.4.9",
     "joi": "^17.13.3",
     "mysql": "^2.18.1",
@@ -56,6 +60,7 @@
     "@swc/core": "^1.10.7",
     "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.31",
