--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.3",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^19.1.2",
     "ngx-cookie-service-ssr": "^19.1.2",
     "rxjs": "~7.8.0",
