--- a/back/Dockerfile.dev
+++ b/back/Dockerfile.dev
@@ -1,17 +1,9 @@
-FROM node:22-alpine AS base
-WORKDIR /usr/src/app
-COPY package*.json ./
-RUN npm ci
+FROM node:22-alpine AS development
 
-FROM node:22-alpine AS production
 WORKDIR /usr/src/app
-
 COPY package*.json ./
 RUN npm ci
 
 COPY . .
-
-# RUN addgroup -S appgroup && adduser -S appuser -G appgroup
-# USER appuser
 
 CMD ["npm", "run", "start:dev"]
