--- a/back/Dockerfile.prod
+++ b/back/Dockerfile.prod
@@ -1,32 +1,29 @@
-# ---- Estágio 1: Base ----
-# Instala todas as dependências (incluindo as de desenvolvimento)
-# Esta camada será cacheada e só será reconstruída se package.json mudar.
 FROM node:22-alpine AS base
-WORKDIR /usr/src/app
-COPY package*.json ./
-RUN npm ci
 
-# ---- Estágio 2: Builder ----
-# Constrói a aplicação a partir do código-fonte.
-FROM base AS builder
+WORKDIR /usr/src/app
+
+FROM base AS deps
+
+COPY package.json package-lock.json* ./
+
+RUN --mount=type=cache,target=/root/.npm npm ci
+
+FROM deps AS builder
+
 COPY . .
+
 RUN npm run build
 
-# ---- Estágio 3: Produção ----
-# A imagem final, pequena e segura.
-FROM node:22-alpine AS production
-WORKDIR /usr/src/app
+FROM base AS production
 
-# Instala APENAS as dependências de produção.
-COPY package*.json ./
-RUN npm ci --omit=dev
+COPY package.json package-lock.json* ./
 
-# Copia os artefatos compilados do estágio 'builder'.
-COPY --from=builder /usr/src/app/dist ./dist
+RUN --mount=type=cache,target=/root/.npm npm ci --omit=dev
 
-# Cria um usuário não-root para executar a aplicação por segurança.
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
 USER appuser
 
-# Comando para iniciar a aplicação.
+COPY --from=builder --chown=appuser:appgroup /usr/src/app/dist ./dist
+
 CMD ["node", "dist/main.js"]
