--- a/front/Dockerfile.dev
+++ b/front/Dockerfile.dev
@@ -3,11 +3,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm ci
 
-FROM node:22-alpine AS production
-WORKDIR /usr/src/app
-
-COPY package*.json ./
-RUN npm ci
+RUN --mount=type=cache,target=/root/.npm npm install
 
 COPY . .
 
