--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@keyv/redis": "^4.6.0",
+    "@nestjs/bullmq": "^11.0.3",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -34,6 +35,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.56.7",
     "cache-manager": "^7.0.1",
     "cache-manager-redis-store": "^3.0.1",
     "cacheable": "^1.10.1",
@@ -65,7 +67,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.15.31",
+    "@types/node": "^22.16.5",
     "@types/passport-jwt": "^4.0.1",
     "@types/selenium-webdriver": "^4.1.28",
     "@types/supertest": "^6.0.2",
