--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,9 @@ APP_PORT=
 DB_NAME=
 DB_PASS=
 DB_USER=
-DB_EXTERNAL_PORT=
+DB_MASTER_EXTERNAL_PORT=
+DB_SLAVE_1_EXTERNAL_PORT=
+DB_SLAVE_2_EXTERNAL_PORT=
 
 PHPMYADMIN_PORT=
 
@@ -18,3 +20,8 @@ SELENIUM_HUB_PORT_3=
 # Traefik configuration
 API_HOST=
 APP_HOST=
+
+# Redis configuration
+REDIS_PORT=
+REDIS_PASSWORD=
+REDISCOMMANDER_PORT=
