--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,9 +12,11 @@ services:
       - SELENIUM_URL=http://selenium-hub:4444/wd/hub
       - API_URL=http://localhost:${API_PORT}
       - APP_URL=http://localhost:${APP_PORT}
+      - ALLOWED_URL=http://localhost:${APP_PORT}
       - DB_PORT=3306
       - DB_TYPE=mysql
-      - DB_HOST=database
+      - DB_MASTER_HOST=database-master
+      - DB_SLAVE_HOSTS=database-slave-1,database-slave-2
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
       - DB_NAME=${DB_NAME}
@@ -27,7 +29,9 @@ services:
       - ./back/.env:/usr/src/app/.env
       - api-data:/usr/src/app/data
     depends_on:
-      - database
+      - database-master
+      - database-slave-1
+      - database-slave-2
       - redis
       - selenium-hub
     restart: unless-stopped
@@ -39,11 +43,18 @@ services:
     command: redis-server
     volumes:
       - redis_data:/data
-  database:
+
+  database-master:
     image: mysql:8.0
     container_name: gatuno-database
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     ports:
-      - "${DB_EXTERNAL_PORT}:3306"
+      - "${DB_MASTER_EXTERNAL_PORT}:3306"
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASS}
       MYSQL_DATABASE: ${DB_NAME}
@@ -51,9 +62,48 @@ services:
       MYSQL_PASSWORD: ${DB_PASS}
     volumes:
       - database-data:/var/lib/mysql
+      - ./database/master/init.sh:/docker-entrypoint-initdb.d/init.sh
+      - ./database/master/my.cnf:/etc/mysql/conf.d/my.cnf
     command: >
       --default-authentication-plugin=mysql_native_password
+
+  database-slave-1:
+    image: mysql:8.0
+    container_name: gatuno-database-slave-1
     restart: unless-stopped
+    ports:
+      - "${DB_SLAVE_1_EXTERNAL_PORT}:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASS}
+    volumes:
+      - database-slave-1-data:/var/lib/mysql
+      - ./database/slave/my.cnf:/etc/mysql/conf.d/my.cnf
+    depends_on:
+      database-master:
+        condition: service_healthy
+    command: ["mysqld", "--default-authentication-plugin=mysql_native_password", "--server-id=2"]
+
+  database-slave-2:
+    image: mysql:8.0
+    container_name: gatuno-database-slave-2
+    restart: unless-stopped
+    ports:
+      - "${DB_SLAVE_2_EXTERNAL_PORT}:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASS}
+    volumes:
+      - database-slave-2-data:/var/lib/mysql
+      - ./database/slave/my.cnf:/etc/mysql/conf.d/my.cnf
+    depends_on:
+      database-master:
+        condition: service_healthy
+    command: ["mysqld", "--default-authentication-plugin=mysql_native_password", "--server-id=3"]
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -61,11 +111,12 @@ services:
     ports:
       - "${PHPMYADMIN_PORT}:80"
     environment:
-      PMA_HOST: database
+      PMA_HOST: database-master
       PMA_USER: ${DB_USER}
       PMA_PASSWORD: ${DB_PASS}
     depends_on:
-      - database
+      - database-master
+
   redis-commander:
     image: ghcr.io/joeferner/redis-commander:latest
     container_name: gatuno-redis-commander
@@ -120,6 +171,10 @@ services:
 
 volumes:
   database-data:
+    driver: local
+  database-slave-1-data:
+    driver: local
+  database-slave-2-data:
     driver: local
   selenium-data:
     driver: local
