--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ services:
   api:
     image: gatuno-api
     container_name: gatuno-api
-    restart: unless-stopped
+    restart: always
     build:
       context: ./back
       dockerfile: Dockerfile.prod
@@ -12,10 +12,12 @@ services:
       - NODE_ENV=${NODE_ENV}
       - SELENIUM_URL=http://selenium-hub:4444/wd/hub
       - API_URL=http://${API_HOST}
-      - APP_URL=${APP_HOST}
+      - APP_URL=http://${APP_HOST}
+      - ALLOWED_URL=http://${APP_HOST},http://localhost:${APP_PORT}
       - DB_PORT=3306
       - DB_TYPE=mysql
-      - DB_HOST=database
+      - DB_MASTER_HOST=database-master
+      - DB_SLAVE_HOSTS=database-slave-1,database-slave-2
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
       - DB_NAME=${DB_NAME}
@@ -27,7 +29,9 @@ services:
       - ./back/.env:/usr/src/app/.env
       - api-data:/usr/src/app/data
     depends_on:
-      - database
+      - database-master
+      - database-slave-1
+      - database-slave-2
       - selenium-hub
       - redis
     networks:
@@ -60,11 +64,17 @@ services:
     networks:
       - gatuno-net
 
-  database:
+  database-master:
     image: mysql:8.0
     container_name: gatuno-database
+    restart: always
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     ports:
-      - "${DB_EXTERNAL_PORT}:3306"
+      - "${DB_MASTER_EXTERNAL_PORT}:3306"
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASS}
       MYSQL_DATABASE: ${DB_NAME}
@@ -72,9 +82,52 @@ services:
       MYSQL_PASSWORD: ${DB_PASS}
     volumes:
       - database-data:/var/lib/mysql
+      - ./database/master/init.sh:/docker-entrypoint-initdb.d/init.sh
+      - ./database/master/my.cnf:/etc/mysql/conf.d/my.cnf
     command: >
       --default-authentication-plugin=mysql_native_password
-    restart: unless-stopped
+    networks:
+      - gatuno-net
+
+  database-slave-1:
+    image: mysql:8.0
+    container_name: gatuno-database-slave-1
+    restart: always
+    ports:
+      - "${DB_SLAVE_1_EXTERNAL_PORT}:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASS}
+    volumes:
+      - database-slave-1-data:/var/lib/mysql
+      - ./database/slave/my.cnf:/etc/mysql/conf.d/my.cnf
+    depends_on:
+      database-master:
+        condition: service_healthy
+    command: ["mysqld", "--default-authentication-plugin=mysql_native_password", "--server-id=2"]
+    networks:
+      - gatuno-net
+
+  database-slave-2:
+    image: mysql:8.0
+    container_name: gatuno-database-slave-2
+    restart: always
+    ports:
+      - "${DB_SLAVE_2_EXTERNAL_PORT}:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASS}
+    volumes:
+      - database-slave-2-data:/var/lib/mysql
+      - ./database/slave/my.cnf:/etc/mysql/conf.d/my.cnf
+    depends_on:
+      database-master:
+        condition: service_healthy
+    command: ["mysqld", "--default-authentication-plugin=mysql_native_password", "--server-id=3"]
     networks:
       - gatuno-net
 
@@ -84,16 +137,17 @@ services:
     ports:
       - "${PHPMYADMIN_PORT}:80"
     environment:
-      PMA_HOST: database
+      PMA_HOST: database-master
       PMA_USER: ${DB_USER}
       PMA_PASSWORD: ${DB_PASS}
     depends_on:
-      - database
+      - database-master
     networks:
       - gatuno-net
 
   selenium-hub:
     image: selenium/hub:latest
+    restart: always
     ports:
       - "${SELENIUM_HUB_PORT_1}:4442"
       - "${SELENIUM_HUB_PORT_2}:4443"
@@ -105,6 +159,7 @@ services:
 
   node-docker:
     image: selenium/node-docker:latest
+    restart: always
     shm_size: 5g
     depends_on:
       - selenium-hub
@@ -132,7 +187,7 @@ services:
       - NODE_ENV=${NODE_ENV}
     depends_on:
       - api
-    restart: unless-stopped
+    restart: always
     networks:
       - traefik_traefik-proxy-net
       - gatuno-net
@@ -144,6 +199,10 @@ services:
 
 volumes:
   database-data:
+    driver: local
+  database-slave-1-data:
+    driver: local
+  database-slave-2-data:
     driver: local
   selenium-data:
     driver: local
