feat: add env var concurrency processor

--- a/back/.env.example
+++ b/back/.env.example
@@ -7,3 +7,7 @@ PASSWORD_KEY_LENGTH=
 
 USERADMIN_EMAIL=
 USERADMIN_PASSWORD=
+
+CHAPTER_SCRAPING_CONCURRENCY=6
+COVER_IMAGE_CONCURRENCY=3
+FIX_CHAPTER_CONCURRENCY=2
