--- a/back/package.json
+++ b/back/package.json
@@ -34,6 +34,7 @@
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "argon2": "^0.44.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.56.7",
