--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "ngx-cookie-service": "^19.1.2",
     "ngx-cookie-service-ssr": "^19.1.2",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
