--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,10 @@ jobs:
               run: npm run test
               working-directory: ./back
 
+            - name: Build Backend
+              run: npm run build
+              working-directory: ./back
+
     test-frontend:
         runs-on: ubuntu-latest
         env:
@@ -60,4 +64,8 @@ jobs:
 
             - name: Run Frontend Tests
               run: npm run test:headless
+              working-directory: ./front
+
+            - name: Build Frontend
+              run: npm run build
               working-directory: ./front
