feat: enhance cover image processing to support batch jobs and concurrency limits
- Updated CoverImageProcessor to handle multiple cover images in a single job, grouping by hostname for efficient scraping.
- Modified CoverImageService to queue batch jobs instead of individual ones.
- Added concurrencyLimit column to websites table for per-site scraping limits.
- Implemented IConcurrencyManager interface for managing concurrency, with InMemory and Redis implementations.
- Integrated concurrency management into ScrapingService for image scraping operations.
- Updated RegisterWebSiteDto and WebsiteConfigDto to include concurrency limit.
- Enhanced WebsiteController with JWT authentication and rate limiting for website registration.

--- a/back/.env.example
+++ b/back/.env.example
@@ -11,3 +11,7 @@ USERADMIN_PASSWORD=
 CHAPTER_SCRAPING_CONCURRENCY=6
 COVER_IMAGE_CONCURRENCY=3
 FIX_CHAPTER_CONCURRENCY=2
+
+CONCURRENCY_SLOT_TTL_MS=1800000
+CONCURRENCY_POLL_INTERVAL_MS=1000
+CONCURRENCY_MAX_WAIT_MS=7200000
