--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.3",
+    "@types/cookie-parser": "^1.4.10",
+    "cookie-parser": "^1.4.7",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^19.1.2",
