--- a/database/master/my.cnf
+++ b/database/master/my.cnf
@@ -1,10 +1,12 @@
 [mysqld]
+server-id                       = 1
+log-bin                         = /var/lib/mysql/mysql-bin.log
+binlog_format                   = ROW
 
-server-id                = 1
-log-bin                  = /var/lib/mysql/mysql-bin.log
-binlog_format            = ROW
-gtid_mode                = ON
-enforce_gtid_consistency = ON
-default_authentication_plugin = mysql_native_password
-skip-host-cache
-skip-name-resolve
+gtid_mode                       = ON
+enforce_gtid_consistency        = ON
+
+binlog_expire_logs_seconds      = 604800
+
+character-set-server            = utf8mb4
+collation-server                = utf8mb4_unicode_ci
