--- a/database/slave/my.cnf
+++ b/database/slave/my.cnf
@@ -1,9 +1,13 @@
 [mysqld]
-
 relay-log                       = /var/lib/mysql/mysql-relay-bin
-read_only                       = 1
 gtid_mode                       = ON
 enforce_gtid_consistency        = ON
-default_authentication_plugin   = mysql_native_password
-skip-host-cache
-skip-name-resolve
+
+# read_only e super_read_only comentados para permitir inicialização
+# Serão ativados via SQL após configurar replicação
+# read_only                       = 1
+# super_read_only                 = 1
+
+relay_log_recovery = ON
+log_replica_updates = ON
+log-bin                         = /var/lib/mysql/mysql-bin.log
