feat: Update Docker configurations and services, including new configuration files and adjustments to environment variables.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
+# Docker Compose configuration
+COMPOSE_FILE=docker-compose.common.yml:docker-compose.dev.yml
+
+# Application environment
 NODE_ENV=
 API_PORT=
 APP_PORT=
+TRAEFIK_PORT=
 
 # Database configuration
 DB_NAME=
@@ -9,7 +14,8 @@ DB_USER=
 DB_MASTER_EXTERNAL_PORT=
 DB_SLAVE_1_EXTERNAL_PORT=
 DB_SLAVE_2_EXTERNAL_PORT=
-
+DB_REPL_USER=
+DB_REPL_PASS=
 PHPMYADMIN_PORT=
 
 # Selenium Hub Ports
