--- a/back/package.json
+++ b/back/package.json
@@ -53,7 +53,7 @@
     "cookie-parser": "^1.4.7",
     "eventemitter2": "^6.4.9",
     "joi": "^17.13.3",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.15.3",
     "nestjs-pino": "^4.4.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
