--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,6 +7,9 @@ services:
       - "${API_PORT}:3000"
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - ALLOWED_URL=http://${APP_HOST},http://localhost:${APP_PORT}
+      - APP_URL=http://localhost:${APP_PORT}
+      - API_URL=http://localhost:${API_PORT}
     develop:
       watch:
         - action: sync
@@ -44,7 +47,6 @@ services:
     ports:
       - "${PHPMYADMIN_PORT}:80"
     environment:
-      PMA_HOST: database-master
       PMA_USER: ${DB_USER}
       PMA_PASSWORD: ${DB_PASS}
       PMA_HOSTS: database-master,database-slave-1,database-slave-2
