--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -66,5 +66,11 @@
       "**/node_modules",
       "./dist"
     ]
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.spec.ts",
+    "src/scraping/scripts/**/*.js"
+  ]
 }
