--- a/front/Dockerfile.dev
+++ b/front/Dockerfile.dev
@@ -1,7 +1,9 @@
-FROM node:22-alpine AS base
+FROM node:24.11.1-alpine AS base
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm ci
+
+ENV NG_CLI_ANALYTICS=false
 
 RUN --mount=type=cache,target=/root/.npm npm install
 
