Refactor scraping service to use Playwright instead of Selenium
- Updated ScrapingService to utilize Playwright for browser automation.
- Removed Selenium-related code and dependencies, including WebDriver and ChromeDriverFactory.
- Implemented PlaywrightBrowserFactory for launching and managing browser instances.
- Replaced image fetching and handling logic with Playwright's capabilities.
- Added tests for new functionalities and ensured existing tests are updated accordingly.
- Removed obsolete scripts related to Selenium and image handling.
- Updated Docker configurations to support Playwright and removed Selenium services.

--- a/.env.example
+++ b/.env.example
@@ -18,11 +18,6 @@ DB_REPL_USER=
 DB_REPL_PASS=
 PHPMYADMIN_PORT=
 
-# Selenium Hub Ports
-SELENIUM_HUB_PORT_1=
-SELENIUM_HUB_PORT_2=
-SELENIUM_HUB_PORT_3=
-
 # Traefik configuration
 API_HOST=
 APP_HOST=
@@ -31,3 +26,9 @@ APP_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
 REDISCOMMANDER_PORT=
+
+# Playwright Debug (VNC)
+PLAYWRIGHT_VNC_PORT=
+PLAYWRIGHT_NOVNC_PORT=
+# PLAYWRIGHT_DEBUG=true
+# PLAYWRIGHT_SLOW_MO=100
