--- a/back/package.json
+++ b/back/package.json
@@ -59,10 +59,12 @@
     "passport-jwt": "^4.0.1",
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.1.2",
+    "playwright": "^1.57.0",
+    "playwright-extra": "^4.3.6",
     "prom-client": "^15.1.3",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "selenium-webdriver": "^4.33.0",
     "sharp": "^0.34.2",
     "socket.io": "^4.8.1",
     "typeorm": "^0.3.24",
@@ -84,9 +86,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.16.5",
     "@types/passport-jwt": "^4.0.1",
-    "@types/selenium-webdriver": "^4.1.28",
     "@types/supertest": "^6.0.2",
-    "chromedriver": "^137.0.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
