--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -62,6 +62,30 @@ services:
     networks:
       - gatuno-net
 
+  playwright-debug:
+    build:
+      context: .
+      dockerfile_inline: |
+        FROM mcr.microsoft.com/playwright:v1.49.1-noble
+        USER root
+        RUN apt-get update -qq && \
+            DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
+            x11vnc xvfb fluxbox novnc python3-websockify && \
+            apt-get clean && rm -rf /var/lib/apt/lists/*
+        EXPOSE 5900 7900
+        CMD Xvfb :99 -screen 0 1920x1080x24 & \
+            sleep 2 && \
+            fluxbox & \
+            x11vnc -display :99 -forever -shared -rfbport 5900 -nopw & \
+            websockify --web /usr/share/novnc 7900 localhost:5900
+    ports:
+      - "${PLAYWRIGHT_NOVNC_PORT}:7900"
+      - "${PLAYWRIGHT_VNC_PORT}:5900"
+    environment:
+      - DISPLAY=:99
+    networks:
+      - gatuno-net
+
   database-master:
     ports:
       - "${DB_MASTER_EXTERNAL_PORT}:3306"
@@ -73,9 +97,3 @@ services:
   database-slave-2:
     ports:
       - "${DB_SLAVE_2_EXTERNAL_PORT}:3306"
-
-  selenium-hub:
-    ports:
-      - "${SELENIUM_HUB_PORT_1}:4442"
-      - "${SELENIUM_HUB_PORT_2}:4443"
-      - "${SELENIUM_HUB_PORT_3}:4444"
