--- a/front/package.json
+++ b/front/package.json
@@ -25,11 +25,13 @@
     "@angular/ssr": "^21.0.1",
     "@types/cookie-parser": "^1.4.10",
     "cookie-parser": "^1.4.7",
+    "echarts": "^6.0.0",
     "express": "^4.18.2",
     "idb": "^8.0.3",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^21.0.0",
     "ngx-cookie-service-ssr": "^21.0.0",
+    "ngx-echarts": "^21.0.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
