chore: initialize package.json for Gatuno monorepo with quality tools configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,40 @@
 /.env
 /backups
+
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+.angular/
+
+# IDE
+.idea/
+*.sublime-*
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage
+coverage/
+
+# Quality tools reports
+.jscpd-report/
+*.stryker-tmp/
+reports/
+mutation-report.html
+
+# Misc
+*.tgz
+.env.local
+.env.*.local
