--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:headless": "ng test --browsers=ChromeHeadless --watch=false",
+    "test:cov": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
+    "lint": "ng lint",
+    "lint:check": "ng lint --fix=false",
+    "mutation": "stryker run",
     "serve:ssr:front": "node dist/front/server/server.mjs"
   },
   "private": true,
@@ -41,15 +45,21 @@
     "@angular-devkit/build-angular": "^21.0.1",
     "@angular/cli": "^21.0.1",
     "@angular/compiler-cli": "^21.0.1",
+    "@stryker-mutator/core": "^8.7.1",
+    "@stryker-mutator/karma-runner": "^8.7.1",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^24.0.0",
+    "angular-eslint": "^19.8.0",
+    "eslint": "^9.18.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.3"
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.20.0"
   }
 }
