--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,27 +3,17 @@ services:
     build:
       context: ./back
       dockerfile: Dockerfile.prod
+    ports:
+      - "${API_PORT}:3000"
     restart: always
-    networks:
-      - traefik_traefik-proxy-net
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`${API_HOST}`)"
-      - "traefik.docker.network=traefik_traefik-proxy-net"
-      - "traefik.http.services.api.loadbalancer.server.port=3000"
 
   app:
     build:
       context: ./front
       dockerfile: Dockerfile.prod
+    ports:
+      - "${APP_PORT}:4000"
     restart: always
-    networks:
-      - traefik_traefik-proxy-net
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=Host(`${APP_HOST}`)"
-      - "traefik.http.services.app.loadbalancer.server.port=4000"
-      - "traefik.docker.network=traefik_traefik-proxy-net"
 
   database-master:
     restart: always
@@ -33,7 +23,3 @@ services:
 
   database-slave-2:
     restart: always
-
-networks:
-  traefik_traefik-proxy-net:
-    external: true
