--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -63,26 +63,16 @@ services:
       - gatuno-net
 
   playwright-debug:
-    build:
-      context: .
-      dockerfile_inline: |
-        FROM mcr.microsoft.com/playwright:v1.49.1-noble
-        USER root
-        RUN apt-get update -qq && \
-            DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
-            x11vnc xvfb fluxbox novnc python3-websockify && \
-            apt-get clean && rm -rf /var/lib/apt/lists/*
-        EXPOSE 5900 7900
-        CMD Xvfb :99 -screen 0 1920x1080x24 & \
-            sleep 2 && \
-            fluxbox & \
-            x11vnc -display :99 -forever -shared -rfbport 5900 -nopw & \
-            websockify --web /usr/share/novnc 7900 localhost:5900
+    image: browserless/chrome:latest
     ports:
-      - "${PLAYWRIGHT_NOVNC_PORT}:7900"
-      - "${PLAYWRIGHT_VNC_PORT}:5900"
+      - "${PLAYWRIGHT_NOVNC_PORT}:3000"
+      - "9222:9222"
     environment:
-      - DISPLAY=:99
+      - CONNECTION_TIMEOUT=600000
+      - MAX_CONCURRENT_SESSIONS=10
+      - ENABLE_DEBUGGER=true
+      - PREBOOT_CHROME=true
+      - KEEP_ALIVE=true
     networks:
       - gatuno-net
 
