--- a/back/package.json
+++ b/back/package.json
@@ -52,6 +52,7 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "eventemitter2": "^6.4.9",
+    "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "mysql2": "^3.15.3",
     "nestjs-pino": "^4.4.1",
