--- a/docker-compose.common.yml
+++ b/docker-compose.common.yml
@@ -39,7 +39,13 @@ services:
   redis:
     image: "redis:7.4-alpine"
     container_name: gatuno-redis
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: >
+      redis-server
+      --requirepass ${REDIS_PASSWORD}
+      --tcp-keepalive 300
+      --timeout 0
+      --maxmemory-policy noeviction
+      --maxmemory 512mb
     healthcheck:
       test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
       interval: 10s
