--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,6 +10,8 @@ services:
       - ALLOWED_URL=http://${APP_HOST},http://localhost:${APP_PORT}
       - APP_URL=http://localhost:${APP_PORT}
       - API_URL=http://localhost:${API_PORT}
+    depends_on:
+      - playwright-debug
     develop:
       watch:
         - action: sync
