feat: Update environment settings to include authentication variables, password hashing, and new monitoring options.

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,56 @@
-# Docker Compose configuration
+# ===========================================
+# Docker Compose Configuration
+# ===========================================
+# Para desenvolvimento: docker-compose.common.yml:docker-compose.dev.yml
+# Para produção: docker-compose.common.yml:docker-compose.prod.yml
 COMPOSE_FILE=docker-compose.common.yml:docker-compose.dev.yml
 
-# Application environment
-NODE_ENV=
-API_PORT=
-APP_PORT=
-TRAEFIK_PORT=
+# ===========================================
+# Application Environment
+# ===========================================
+# Valores: development, production, test
+NODE_ENV=development
 
-# Database configuration
-DB_NAME=
-DB_PASS=
-DB_USER=
-DB_MASTER_EXTERNAL_PORT=
-DB_SLAVE_1_EXTERNAL_PORT=
-DB_SLAVE_2_EXTERNAL_PORT=
-DB_REPL_USER=
-DB_REPL_PASS=
-PHPMYADMIN_PORT=
+# Portas expostas (desenvolvimento)
+API_PORT=3000
+APP_PORT=4200
 
-# Traefik configuration
-API_HOST=
-APP_HOST=
+# ===========================================
+# Hosts / URLs
+# ===========================================
+# Usados para configurar CORS e URLs internas
+API_HOST=localhost:3000
+APP_HOST=localhost:4200
 
-# Redis configuration
-REDIS_PORT=
-REDIS_PASSWORD=
-REDISCOMMANDER_PORT=
+# ===========================================
+# Database Configuration (MySQL)
+# ===========================================
+DB_NAME=gatuno
+DB_USER=gatuno
+DB_PASS=your_secure_password
 
-# Playwright Debug (VNC)
-PLAYWRIGHT_VNC_PORT=
-PLAYWRIGHT_NOVNC_PORT=
-# PLAYWRIGHT_DEBUG=true
-# PLAYWRIGHT_SLOW_MO=100
+# Portas externas para acesso direto ao banco (desenvolvimento)
+DB_MASTER_EXTERNAL_PORT=3306
+DB_SLAVE_1_EXTERNAL_PORT=3307
+DB_SLAVE_2_EXTERNAL_PORT=3308
+
+# Replicação MySQL
+DB_REPL_USER=replicator
+DB_REPL_PASS=replication_password
+
+# ===========================================
+# Redis Configuration
+# ===========================================
+REDIS_PASSWORD=your_redis_password
+
+# ===========================================
+# Ferramentas de Desenvolvimento
+# ===========================================
+# PHPMyAdmin
+PHPMYADMIN_PORT=8080
+
+# Redis Commander
+REDISCOMMANDER_PORT=8081
+
+# Playwright Debug (noVNC - browser remoto)
+PLAYWRIGHT_NOVNC_PORT=3001
