--- a/back/.env.example
+++ b/back/.env.example
@@ -1,17 +1,66 @@
-JWT_ACCESS_SECRET=
-JWT_ACCESS_EXPIRATION=
-JWT_REFRESH_SECRET=
-JWT_REFRESH_EXPIRATION=
-SALT_LENGTH=
-PASSWORD_KEY_LENGTH=
+# ===========================================
+# JWT Authentication
+# ===========================================
+JWT_ACCESS_SECRET=your_jwt_access_secret_key
+JWT_ACCESS_EXPIRATION=15m
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
+JWT_REFRESH_EXPIRATION=60m
 
-USERADMIN_EMAIL=
-USERADMIN_PASSWORD=
+# ===========================================
+# Password Hashing
+# ===========================================
+SALT_LENGTH=16
+PASSWORD_KEY_LENGTH=64
 
+# ===========================================
+# Admin User (criado automaticamente)
+# ===========================================
+USERADMIN_EMAIL=admin@example.com
+USERADMIN_PASSWORD=your_admin_password
+
+# ===========================================
+# Queue Concurrency Settings
+# ===========================================
 CHAPTER_SCRAPING_CONCURRENCY=6
 COVER_IMAGE_CONCURRENCY=3
 FIX_CHAPTER_CONCURRENCY=2
+BOOK_UPDATE_CONCURRENCY=2
 
+# Slot de concorrência (controle de filas)
 CONCURRENCY_SLOT_TTL_MS=1800000
 CONCURRENCY_POLL_INTERVAL_MS=1000
 CONCURRENCY_MAX_WAIT_MS=7200000
+
+# ===========================================
+# Book Auto-Update
+# ===========================================
+BOOK_UPDATE_ENABLED=true
+# Cron: a cada 6 horas
+BOOK_UPDATE_CRON=0 */6 * * *
+
+# ===========================================
+# Monitoring / Metrics (Prometheus)
+# ===========================================
+METRICS_ENABLED=true
+METRICS_PATH=/api/metrics
+METRICS_PREFIX=gatuno_
+GRAFANA_PORT=3002
+PROMETHEUS_SCRAPE_INTERVAL=10s
+
+# ===========================================
+# Health Check Limits
+# ===========================================
+HEALTH_HEAP_LIMIT_MB=300
+HEALTH_RSS_LIMIT_MB=500
+HEALTH_READINESS_HEAP_LIMIT_MB=400
+HEALTH_DISK_THRESHOLD_PERCENT=0.7
+
+# ===========================================
+# Playwright / Scraping Debug
+# ===========================================
+# Habilita modo debug com browser visível
+PLAYWRIGHT_DEBUG=false
+# Delay entre operações (ms) - útil para debug
+PLAYWRIGHT_SLOW_MO=0
+# Endpoint WebSocket para conexão com browser remoto (browserless)
+# PLAYWRIGHT_WS_ENDPOINT=ws://playwright-debug:3000
