--- a/back/package.json
+++ b/back/package.json
@@ -41,6 +41,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.6",
     "@willsoto/nestjs-prometheus": "^6.0.2",
+    "archiver": "^7.0.1",
     "argon2": "^0.44.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
@@ -58,6 +59,7 @@
     "nestjs-pino": "^4.4.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.15.0",
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.1.2",
     "playwright": "^1.57.0",
@@ -79,6 +81,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/archiver": "^6.0.2",
     "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
@@ -87,6 +90,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.16.5",
     "@types/passport-jwt": "^4.0.1",
+    "@types/pdfkit": "^0.13.5",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -95,6 +99,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
+    "strip-comments": "^2.0.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
