feat: Implement a hybrid caching strategy for downloads with support for buffering and streaming.

--- a/back/.env.example
+++ b/back/.env.example
@@ -64,3 +64,11 @@ PLAYWRIGHT_DEBUG=false
 PLAYWRIGHT_SLOW_MO=0
 # Endpoint WebSocket para conexão com browser remoto (browserless)
 # PLAYWRIGHT_WS_ENDPOINT=ws://playwright-debug:3000
+
+# ===========================================
+# Download Cache Settings
+# ===========================================
+# Threshold em MB para alternar entre buffer e streaming
+# Arquivos menores que este valor usam buffer+cache
+# Arquivos maiores usam streaming com cache paralelo
+DOWNLOAD_CACHE_THRESHOLD_MB=100
