fix: Update allowedCommonJsDependencies and adjust budget limits in angular.json

--- a/front/angular.json
+++ b/front/angular.json
@@ -44,7 +44,12 @@
             "prerender": true,
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "allowedCommonJsDependencies": [
+              "cookie-parser",
+              "debug",
+              "xmlhttprequest-ssl"
+            ]
           },
           "configurations": {
             "production": {
@@ -57,13 +62,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "750kB",
+                  "maximumError": "1.5MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "10kB",
+                  "maximumError": "20kB"
                 }
               ],
               "outputHashing": "all",
