--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^21.0.1",
     "@angular/cdk": "^21.1.0",
     "@angular/common": "^21.0.1",
     "@angular/compiler": "^21.0.1",
