--- a/front/package.json
+++ b/front/package.json
@@ -31,9 +31,11 @@
     "express": "^4.18.2",
     "idb": "^8.0.3",
     "jwt-decode": "^4.0.0",
+    "ng2-pdf-viewer": "^10.4.0",
     "ngx-cookie-service": "^21.0.0",
     "ngx-cookie-service-ssr": "^21.0.0",
     "ngx-echarts": "^21.0.0",
+    "ngx-markdown": "^21.0.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
@@ -46,6 +48,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^24.0.0",
+    "baseline-browser-mapping": "^2.9.19",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
