--- a/docker-compose.common.yml
+++ b/docker-compose.common.yml
@@ -6,9 +6,9 @@ services:
     shm_size: 2g
     environment:
       - NODE_ENV=${NODE_ENV}
-      - API_URL=http://${API_HOST}
-      - APP_URL=http://${APP_HOST}
-      - ALLOWED_URL=http://${APP_HOST}
+      - API_URL=https://${API_HOST}
+      - APP_URL=https://${APP_HOST}
+      - ALLOWED_URL=http://${APP_HOST},https://${APP_HOST}
       - DB_TYPE=mysql
       - DB_PORT=3306
       - DB_MASTER_HOST=database-master
