feat: add backup and restore scripts for api-data volume
- Created backup-api-data.sh for backing up the api-data volume with options for retention, container stop, and logging.
- Created restore-api-data.sh for restoring from backup with options for verification, force, and logging.
- Added package.json to manage dev dependencies for commit linting and hooks.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,6 +10,13 @@ services:
       - ALLOWED_URL=http://${APP_HOST},http://localhost:${APP_PORT}
       - APP_URL=http://localhost:${APP_PORT}
       - API_URL=http://localhost:${API_PORT}
+      - PLAYWRIGHT_WS_ENDPOINT=${PLAYWRIGHT_WS_ENDPOINT:-ws://playwright-debug:3000}
+      - PLAYWRIGHT_DEBUG=${PLAYWRIGHT_DEBUG:-true}
+      - PLAYWRIGHT_SLOW_MO=${PLAYWRIGHT_SLOW_MO}
+      # Session / JWT Settings (defaults in Joi schema: ACCESS=15m, REFRESH=7d, MAX_SESSIONS=0=unlimited)
+      # - JWT_ACCESS_EXPIRATION=15m
+      # - JWT_REFRESH_EXPIRATION=7d
+      # - MAX_SESSIONS_PER_USER=0
     depends_on:
       - playwright-debug
     develop:
