chore: update package.json with linting and formatting scripts
- Added linting scripts: `lint`, `lint:fix`, `lint:secrets`, and `lint:spell`.
- Introduced formatting script: `format`.
- Added devDependencies for biome, cspell, and secretlint.

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,6 +4,10 @@
 pre-commit:
   parallel: true
   commands:
-    # Aqui adicionaremos o Biome ou ESLint futuramente
+    check-secrets:
+      run: npx secretlint {staged_files}
+    check-spell:
+      run: npx cspell {staged_files} || true
     check-code:
-      run: echo "Validando código..."
+      glob: "*.{js,ts,cjs,mjs,json}"
+      run: npx @biomejs/biome check --write --no-errors-on-unmatched --files-ignore-unknown=true {staged_files} && git add {staged_files}
