--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,6 +6,11 @@ services:
     ports:
       - "${API_PORT}:3000"
     restart: always
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - gatuno-net
 
   app:
     build:
@@ -14,12 +19,24 @@ services:
     ports:
       - "${APP_PORT}:4000"
     restart: always
+    networks:
+      - gatuno-net
 
   database-master:
     restart: always
+    networks:
+      - gatuno-net
 
   database-slave-1:
     restart: always
+    networks:
+      - gatuno-net
 
   database-slave-2:
     restart: always
+    networks:
+      - gatuno-net
+
+networks:
+  gatuno-net:
+    driver: bridge
