fix: ensure redis service is properly defined in docker-compose for consistent network configuration

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,6 +37,10 @@ services:
     networks:
       - gatuno-net
 
+  redis:
+    restart: always
+    networks:
+      - gatuno-net
 networks:
   gatuno-net:
     driver: bridge
